plugins/xpath/xpath-lang/testData/xpath/highlighting/quotedStringLiteral.xpath
concat(
<error descr="Malformed string literal">'a''b'</error>,
<error descr="Malformed string literal">"c""d"</error>,
<error descr="Malformed string literal">"""xz"""</error>,
<error descr="Malformed string literal">''''</error>)